[project]
name = "services-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "osmnx>=2.1.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "streamlit-folium>=0.26.2",
]
